css/civicrm.css
/* ... */
/* rounded corners */
.crm-container div.status,
.crm-container #help,
.crm-container .help,
.crm-container .ui-tabs-panel,
.crm-container .crm-content-block,
#full-screen-header,
.crm-container .crm-pager,
.crm-container form .section-hidden-border,
.crm-container #search-status,
.crm-container .crm-form-block,
.crm-container .crm-search-tasks,
.crm-container .crm-tasks,
.crm-container div.form-item,
.crm-container div.messages {
  border-radius: 4px;
}

/* deprecated autocomplete styles */

.ac_results {
  background: transparent url(../i/dropdown-pointer.gif) no-repeat 25px 1px;
  padding-top: 5px;
  border: none;
  text-align: left;
}

.ac_results-inner,
.crm-participant-list-inner,
.crm-event-links-list-inner,
.crm-contribpage-links-list-inner,
.crm-contact-actions-list-inner {
  background-color: #2f2f2e;
  padding: 4px;
}

.crm-create-new-list-inner,
.crm-create-new-list-inner ul {
  width: 160px!important;
}

.ac_results li a {
  display: block;
}

.crm-container .ac_results li,
.crm-container .ac_results li a,
.crm-container .ac_results li a:visited {
  color: #dfdfdf;
  text-decoration: none;
}

.ac_results li strong {
  color: #fff;
  font-weight: normal;
}

.crm-container .ac_results li .icon,
.crm-container .ac_results li a .icon,
.crm-container .ac_results li a:visited .icon {
  background-image: url(../i/icons/jquery-ui-FFFFFF.png);
}

.crm-container .ac_results li a:hover .icon {
  background-image: url(../i/icons/jquery-ui-3E3E3E.png);
}

.ac_results li:hover,
.ac_results li:hover a,
.ac_results li a:hover {
  background-color: #f5f6f1;
  color: #666;
}
.crm-container .ac_results li:hover strong {
  color: #000;
}

/* loader autocomplete */

.crm-container .ui-autocomplete-loading {
  background: white url('../i/loading.gif') no-repeat right center;
}

/* select2 */
.crm-container div.select2-container {
  min-width: 6em;
  font-size: 11px;
}
/* Add arrow icon to multi-selects */
.crm-container .select2-container-multi .select2-choices:before {
  background: url("../bower_components/select2/select2.png") no-repeat scroll 0 -4px;
  content: "";
  display: block;
  height: 15px;
  position: absolute;
  right: 0;
  top: 5px;
  width: 20px;
}
/* Add search icon to ajax multi-selects and opened multi-selects */
.crm-container .select2-container-multi.select2-container-active .select2-choices:before,
.crm-container .select2-container-multi.crm-ajax-select .select2-choices:before {
  background-position: right -26px;
}
.crm-container .select2-container.select2-container-disabled .select2-choice .select2-arrow b {
  visibility: hidden;
}
.crm-container .select2-container-multi.loading .select2-choices:before,
.crm-container .select2-container.loading .select2-choice .select2-arrow b {
  background: url('../i/loading.gif') no-repeat center center !important;
  visibility: visible;
}
/* Reduce select2 size to match other inputs */
.crm-container .select2-container-multi .select2-choices {
  min-height: 25px;
}
.crm-container .select2-container-multi .select2-choices .select2-search-choice {
  padding: 2px 5px 2px 18px;
}
.crm-container .select2-container-multi .select2-choices .select2-search-field input {
  padding: 4px;
  min-height: unset;  /* Overide style imposed by WordPress 5.3 - see https://lab.civicrm.org/dev/wordpress/issues/46 */
}
.crm-container .select2-search-choice-close {
  top: 2px;
}
.crm-container .select2-container .select2-choice abbr {
  top: 6px;
}
.crm-container .select2-container .select2-choice > .select2-chosen {
  font-size: 1.1em;
}
/* Add search icon to ajax single-selects */
.crm-container .crm-ajax-select .select2-arrow b {
  background-position: -39px -22px;
}
/* Restore normal icon when searchable field is open */
.crm-container .select2-dropdown-open .select2-choice .select2-arrow b {
  background-position: -18px 1px;
}
.select2-drop .crm-entityref-links {
  border-top: 1px solid #d3d3d3;
  margin-top: 9px;
}
.select2-drop .crm-entityref-filters {
  margin-top: 4px;
}
.select2-drop .crm-entityref-filters select,
.select2-drop .crm-entityref-filters input {
  border-radius: 3px;
  border: 1px solid #f2f2f2;
  background-color: #f6f6f6;
  color: #494949;
  font-size: 11px;
  max-width: 60%;
}
.select2-drop .crm-entityref-filters select:hover,
.select2-drop .crm-entityref-filters select:focus,
.select2-drop .crm-entityref-filters select.active,
.select2-drop .crm-entityref-filters input {
  border: 1px solid #808080;
}
.select2-drop .crm-entityref-filter-value {
  margin-left: 1em;
}
.select2-drop .crm-entityref-filters input {
  padding-left: .5em;
  background-color: #fefefe;
}
/* Style autocomplete results */
.crm-container .select2-results {
  font-size: 12px;
  padding: 0;
  text-align: left;
}
.crm-container .select2-results li,
.crm-container .select2-results .crm-select2-row,
.crm-container .select2-results .crm-select2-row-description p {
  padding: 0;
  margin: 0;
}
.crm-container .select2-results .crm-select2-row .crm-select2-row-label {
  font-size: 1.1em;
}
.crm-container .select2-results .crm-select2-row-description p {
  font-size: 0.8em;
  line-height: 1.5em;
  color: #696969;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: normal;
}
.crm-container .select2-results .select2-highlighted > .select2-result-label .crm-select2-row-description p {
  color: #f0f0f0;
}
.select2-container .crm-select2-row-description {
  display: none;
}
.crm-container .select2-results .crm-select2-icon {
  width: 20px;
  height: 100%;
  float: left;
}
.crm-container .select2-results .crm-select2-icon .crm-icon {
  width: 16px;
  height: 16px;
  margin: 0;
}
.crm-container .select2-results li.select2-no-results {
  padding-left: 4px;
  padding-top: 4px;
  margin-left: 4px;
}
.crm-container .select2-results li {
  margin: 0;
  padding: 0;
}
.crm-container .crm-action-menu .select2-default span.select2-chosen {
  color: #2786c2;
}
.crm-container .select2-container[class*=" fa-"]:before {
  display: none;
}
/* ... */

